proj2/test/test_11712009_7.out
Error type 7 at Line 5: Derived type can not be used in arithemetic operator.
Error type 8 at Line 5: Invalid return type.
