proj2/test/test_11712009_7.spl
struct c {

};
int main(int a, int b) {
    struct c f;
    return f + a;
}